Since "len" has changed to (unsinged) size_t, the while loop condition (len > 0) became less able to detect its underflow. So check the subtrahend to avoid the underflow.

Should fix PR kern/44092.